2010-10-05  Kenneth Russell  <kbr@google.com>

        Reviewed by Tony Chang.

        [chromium] Implement layerTreeAsText in DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=47216

        Plumbed Frame::layerTreeAsText through Chromium's WebKit API to
        make it callable from DumpRenderTree.

        No new tests; verified with existing compositor layout tests.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::layerTreeAsText):
        * DumpRenderTree/chromium/LayoutTestController.h:

2010-10-05  Brent Fulgham  <bfulgham@webkit.org>

        Unreviewed build correction.

        * DumpRenderTree/win/ImageDiff.vcproj: Use WinCairo debug
        property sheet so proper libraries are linked.

2010-10-05  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Fix url conversion in QWebHistory

        Converting from KURL to WFT::String to QUrl does not
        permit proper percent encoding later.

        https://bugs.webkit.org/show_bug.cgi?id=47048

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::dumpHistoryItem):

2010-10-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        REGRESSION (r68966?): All dumpAsText test fail on WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=47188
        <rdar://problem/8514104>

        When constructing the std::string, use the real string length instead of the maximum buffer size.

        * TestWebKitAPI/PlatformUtilities.h:
        (TestWebKitAPI::Util::toSTD):
        * WebKitTestRunner/StringFunctions.h:
        (WTR::toSTD):

2010-10-04  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Add MIMEType accessor to WKFrame
        <rdar://problem/8347683>
        https://bugs.webkit.org/show_bug.cgi?id=47138

        * TestWebKitAPI/PlatformUtilities.h:
        (TestWebKitAPI::Util::toSTD):