@@ -1,3 +1,14 @@
+2010-10-05  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        [chromium] fix image diffing in NRWT
+        https://bugs.webkit.org/show_bug.cgi?id=47128
+
+        * Scripts/webkitpy/layout_tests/port/chromium.py: Stop using
+            NamedTemporaryFile since it doesn't work on Windows.
+        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
+
 2010-10-05  Kenneth Russell  <kbr@google.com>
 
         Reviewed by Tony Chang.
